# Pandas_Market_Predictor

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  test.py
.github/: FUNDING.yml
Pandas_Market_Predictor/: __init__.py  dataset.csv  main.py  pmp.py
image/: README.md
