[project]
name = "Pandas_Market_Predictor"
version = "1.0.0"
authors = [
  { name="Ouedraogo Somkieta Rahim Alex", email="s.r.a.ouedraogo@gmail.com" },
]
description = "Pandas Market Predictor, is a deep learning API written in Python on top of Panda that helping you predict future price (low and high), trend of Financial market assets."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "Artificial_Neural_Network_Classifier",
    "Awesome-Linear-Regressio",
    'importlib-metadata; python_version<"3.7"',
]

[project.urls]
"Homepage" = "https://github.com/somkietacode/Pandas_Market_Predictor"
"Bug Tracker" = "https://github.com/somkietacode/Pandas_Market_Predictor/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
