[metadata]
name = Pandas Market Predictor
description = Powerful Market Predictor
long_description = file: README.md
long_description_content_type = text/markdown
author = The artificial neural network developpement team
author_email = somkietacode@python.org
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
project_urls =
    Bug Tracker = https://github.com/somkietacode/Pandas_Market_Predictor/issues
    Source Code = https://github.com/somkietacode/Pandas_Market_Predictor
[options]
packages = find:
install_requires =
    numpy>=1.20.3; python_version<'3.10'
    numpy>=1.21.0; python_version>='3.10'
    pandas>=1.5.1.; python_version<'3.10'
    Artificial_Neural_Network_Classifier>=1.0.2; python_version>='3.10'
    Awesome-Linear-Regression>=1.0.0; python_version>='3.10'
python_requires = >=3.8
